--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "watch": "nodemon -e js,json,hbs ./app.js"
+    "watch": "nodemon -e js,json,hbs ./bin/www"
   },
   "dependencies": {
     "bcrypt": "^3.0.0",
