--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "watch": "nodemon -e js,json,hbs ./bin/www"
+    "watch:scss": "node-sass ./public/sass/main.scss ./public/stylesheets/style.css -w",
+    "build:scss": "node-sass ./public/sass/main.scss ./public/stylesheets/style.css --output style compressed",
+    "watch": "nodemon -e js,json,hbs ./bin/www | npm run watch:scss"
   },
   "dependencies": {
     "bcrypt": "^3.0.0",
@@ -16,7 +18,8 @@
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
     "mongoose": "^5.2.5",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "node-sass": "^4.9.2"
   },
   "devDependencies": {
     "nodemon": "^1.18.3"
