add: regster form + styles

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "start": "node ./bin/www",
     "watch:scss": "node-sass ./public/sass/main.scss ./public/stylesheets/style.css -w",
     "build:scss": "node-sass ./public/sass/main.scss ./public/stylesheets/style.css --output style compressed",
-    "watch": "nodemon -e js,json,hbs ./bin/www | npm run watch:scss"
+    "watch": "nodemon -e js,json,hbs ./bin/www",
+    "watch:n-sass": "nodemon -e js,json,hbs ./bin/www | npm run watch:scss"
   },
   "dependencies": {
     "bcrypt": "^3.0.0",
