--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
+    "seed": "node ./bin/usersSeed2.js",
     "watch:scss": "node-sass ./public/sass/main.scss ./public/stylesheets/style.css -w",
     "build:scss": "node-sass ./public/sass/main.scss ./public/stylesheets/style.css --output style compressed",
     "watch": "nodemon -e js,json,hbs ./bin/www",
