--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
     "mongoose": "^5.2.5",
+    "mongoose-validator": "^2.1.0",
     "morgan": "~1.9.0",
     "node-sass": "^4.9.2"
   },
