--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-session": "^1.15.6",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
+    "moment": "^2.22.2",
     "mongoose": "^5.2.5",
     "mongoose-validator": "^2.1.0",
     "morgan": "~1.9.0",
