--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "http-errors": "~1.6.2",
     "moment": "^2.22.2",
     "mongoose": "^5.2.5",
+    "mongoose-unique-validator": "^2.0.1",
     "mongoose-validator": "^2.1.0",
     "morgan": "~1.9.0",
     "node-sass": "^4.9.2"
