--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "connect-mongo": "^2.0.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
+    "dotenv": "^6.0.0",
     "express": "~4.16.0",
     "express-session": "^1.15.6",
     "hbs": "~4.0.1",
